--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
       <!-- Introduction section -->
       <section id="intro">
-        <img src="Myphoto.PNG" alt="Your Name">
+        <img src="Myphoto.png" alt="Your Name">
         <h1>  &#x1F44B;
           Hi, I'm Lucas</h1>
         <h2>Front-End / BI developer </h2>
